Changed projects to just contain my favorite ones.

--- a/index.html
+++ b/index.html
@@ -99,57 +99,59 @@
 
         <div class="container">
             <div class="row justify-content-around">
-                <div
-                    id="bio"
-                    class="col-sm-12 col-lg-8 rounded justify-content-around mt-2 p-0 bg-white"
-                >
-                    <div>
-                        <h1
-                            class="block-header row justify-content-around primary-text-color"
-                        >
-                            My Bio
-                        </h1>
-                        <p id="bio-paragraph" class="m-0 p-2"></p>
-                    </div>
-                </div>
-
-                <div
-                    id="contact"
-                    class="card col-sm-12 col-lg-8  justify-content-around p-0 mt-2"
-                >
+                
                     <div
-                        class="row justify-content-around pt-2 primary-text-color"
+                        id="bio"
+                        class="col-sm-12 col-lg-8 rounded justify-content-around mt-2 p-0 bg-white"
                     >
-                        <img
-                            id="photo"
-                            src="images/2018.jpg"
-                            alt=""
-                            width="150"
-                        />
+                        <div>
+                            <h1
+                                class="block-header row justify-content-around primary-text-color"
+                            >
+                                My Bio
+                            </h1>
+                            <p id="bio-paragraph" class="m-0 p-2"></p>
+                        </div>
                     </div>
-                    <div class="card-body p-0">
-                        <h1
-                            class="block-header card-title pl-1 row justify-content-around primary-text-color"
+
+                    <div
+                        id="contact"
+                        class="card col-sm-12 col-lg-8  justify-content-around p-0 mt-2"
+                    >
+                        <div
+                            class="row justify-content-around pt-2 primary-text-color"
                         >
-                            Contact Me
-                        </h1>
-                        <ul class="list-group">
-                            <li class="list-group-item px-2 border-0">
-                                School Email:
-                                <a
-                                    href="mailto:jmorgan@basecampcodingacademy.org"
-                                    >jmorgan@basecampcodingacademy.org</a
-                                >
-                            </li>
-                            <li class="list-group-item px-2 border-0">
-                                Personal Email:
-                                <a href="mailto:morganjohnjr@icloud.com"
-                                    >morganjohnjr@icloud.com</a
-                                >
-                            </li>
-                        </ul>
+                            <img
+                                id="photo"
+                                src="images/2018.jpg"
+                                alt=""
+                                width="150"
+                            />
+                        </div>
+                        <div class="card-body p-0">
+                            <h1
+                                class="block-header card-title pl-1 row justify-content-around primary-text-color"
+                            >
+                                Contact Me
+                            </h1>
+                            <ul class="list-group">
+                                <li class="list-group-item px-2 border-0">
+                                    School Email:
+                                    <a
+                                        href="mailto:jmorgan@basecampcodingacademy.org"
+                                        >jmorgan@basecampcodingacademy.org</a
+                                    >
+                                </li>
+                                <li class="list-group-item px-2 border-0">
+                                    Personal Email:
+                                    <a href="mailto:morganjohnjr@icloud.com"
+                                        >morganjohnjr@icloud.com</a
+                                    >
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
+                
 
                 <div
                     id="practice"
@@ -173,33 +175,26 @@
 
                 <div
                     id="projects"
-                    class="rounded col-sm-12 col-lg-8 justify-content-around mt-3 bg-white"
+                    class="rounded col-sm-12 col-lg-8 justify-content-around my-3 pb-3 bg-white"
                 >
                     <div>
                         <h1
                             class="block-header row justify-content-around primary-text-color"
                         >
-                            My Projects
+                            My Favorite Projects
                         </h1>
+                    </div>
+                    <div>
+                        <p class="projects-github-link">
+                            What to see more? Visit my Github repositories:
+                            <a
+                                href="https://github.com/johnmorgan2000?tab=repositories"
+                                >Click here</a
+                            >
+                        </p>
                     </div>
 
                     <div id="favorite">
-                        <h2 class="language primary-text-color">Favorites</h2>
-                        <div class="row justify-content-around"></div>
-                    </div>
-
-                    <div id="python">
-                        <h2 class="language primary-text-color">Python</h2>
-                        <div class="row justify-content-around"></div>
-                    </div>
-
-                    <!-- <div id="html">
-                        <h2 class="language primary-text-color">HTML</h2>
-                        <div class="row justify-content-around"></div>
-                    </div> -->
-
-                    <div id="javascript">
-                        <h2 class="language primary-text-color">Javascript</h2>
                         <div class="row justify-content-around"></div>
                     </div>
                 </div>
