--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
                         class="card col-sm-12 col-lg-8  justify-content-around p-0 mt-2"
                     >
                         <div
+                            id="photo-container"
                             class="row justify-content-around pt-2 primary-text-color"
                         >
                             <img
                                 id="photo"
-                                src="images/2018.jpg"
-                                alt=""
-                                width="150"
+                                src="images/personal_pic.JPG"
+                                alt="profile"
                             />
                         </div>
                         <div class="card-body p-0">
