--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         >
                             <img
                                 id="photo"
-                                src="images/personal_pic.JPG"
+                                src="images/cropped_personal_pic.jpg"
                                 alt="profile"
                             />
                         </div>
@@ -163,10 +163,10 @@
                         Practiced<br />Languages/Frameworks
                     </h1>
                     <ul>
-                        <li class="px-2 border-0">Java</li>
+                        <li class="px-2 border-0">Java/Spring</li>
                         <li class="px-2 border-0">React.js</li>
                         <li class="px-2 border-0">SASS</li>
-                        <li class="px-2 border-0">Python</li>
+                        <li class="px-2 border-0">Python/Django</li>
                         <li class="px-2 border-0">HTML</li>
                         <li class="px-2 border-0">CSS</li>
                         <li class="px-2 border-0">Javascript</li>
